# Django-app

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py
