[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Anzor.Karaev <anzorkaraev123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
gunicorn = "^23.0.0"
pillow = "9.4.0"
djangorestframework = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
